--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   carousel_slider: ^4.2.1
   intl: ^0.17.0
   image_picker: ^0.8.4+5
+  equatable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
