--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.4+5
   equatable: ^2.0.0
+  firebase_storage: ^11.7.7
 
 dev_dependencies:
   flutter_test:
