--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image_picker: ^0.8.4+5
   equatable: ^2.0.0
   firebase_storage: ^11.7.7
+  image_cropper: ^8.0.1
 
 dev_dependencies:
   flutter_test:
